--- a/style.css
+++ b/style.css
@@ -1,23 +1,57 @@
-body{
-    margin-top: 0px;
-    background-color: rgb(236, 232, 232);
+#wholeBody{
+    margin: 0px;
+    padding: 0px;
     font-family: "Kanit", sans-serif;
+    background-color:rgb(215, 211, 211);
+    display: flex;
+    justify-content: space-around;
+}
+h1{
+    border-radius:40px ;
+    text-align: center;
+
 }
 /* Style for the grid container */
 #grid-container {
     display: grid;
+    background-color: rgb(255, 255, 255);
     grid-template-columns: repeat(16, 1fr); /* 16 columns */
     grid-template-rows: repeat(16, 1fr); /* 16 rows */
-    gap: 10px; /* Gap between divs */
+    gap: 6px; /* Gap between divs */
     border: 2px solid black;/* Border for visualization */
-    
+    padding: 6px;
+    margin: 6px;
+    height: 500px;
+    width: 500px;
 }
-
 /* Style for the square divs */
 .grid-item {
     background-color: #ccc; /* Default background color */
-    border: 6px solid white; /* Border around each square */
+    border: 0px solid white; /* Border around each square */
     width: 100%; /* Adjusting width to fit in the grid */
     height: 100%; /* Adjusting height to fit in the grid */
-    
+    padding: 0;
+    transition: 0.3s;
+}
+.grid-item:hover{
+    border-color: #531a09;
+    transition: 0.4s;
+}
+#inputButton{  
+    background-color: white; /* Green */
+    border: 2px solid #531a09;
+    border-radius: 5px;
+    color: #531a09;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;     
+    margin: 100px;
+}
+#inputButton:hover {
+    background-color: #531a09; /* Green */
+    color: white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
