--- a/style.css
+++ b/style.css
@@ -1,33 +1,94 @@
+body{
+    margin: 0;
+    padding: 0;
+}
+.header{
+    border-radius: 4px;
+    text-align: center;
+    margin: 10px;
+}
+.header h1{
+    margin: 0;
+    padding: 0;
+}
 #wholeBody{
-    margin: 0px;
-    padding: 0px;
-    font-family: "Kanit", sans-serif;
+    margin:  auto 10px 10px 10px;
+    padding: 10px;
+    padding-bottom: 5px;
+    font-family: "Lucida Console", "Courier New", monospace;
     background-color:rgb(215, 211, 211);
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
+    align-items: start;
+    border-radius: 20px;
+    justify-content: center;
 }
-h1{
-    border-radius:40px ;
+.left-side{
+    display: flex;
+    flex: 50%;
+    justify-content: center;
+}
+.right-side{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+    padding: 50px;
+}
+.input-container{
+    margin-bottom: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2px;
+}
+input[type =number]{
+    border: 3px solid black;
+    width: 300px;
+    height: 30px;
+    padding-left: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+  }
+#enterButton{
+    background-color: white; 
+    border: 2px solid #d8481c;
+    border-radius: 5px;
+    color: #d8481c;
+    padding: 10px 32px;
+    font-size: 16px;
+    transition-duration: 0.4s;     
+    cursor: pointer;
+}
+#enterButton:hover{
+    background-color: #d8481c; 
+    color: white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.instruction{
     text-align: center;
+}
+#resetButton{  
+    background-color: white; /* Green */
+    border: 2px solid #531a09;
+    border-radius: 5px;
+    color: #531a09;
+    padding: 15px 32px;
+    font-size: 16px;
+    transition-duration: 0.4s;   
+    cursor: pointer;
+    margin-top: 150px;
 
 }
-/* Style for the grid container */
-#grid-container {
-    display: grid;
-    background-color: rgb(255, 255, 255);
-    grid-template-columns: repeat(16, 1fr); /* 16 columns */
-    grid-template-rows: repeat(16, 1fr); /* 16 rows */
-    gap: 6px; /* Gap between divs */
-    border: 2px solid black;/* Border for visualization */
-    padding: 6px;
-    margin: 6px;
-    height: 500px;
-    width: 500px;
+#resetButton:hover {
+    background-color: #421d11; /* Green */
+    color: white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-/* Style for the square divs */
+
 .grid-item {
     background-color: #ccc; /* Default background color */
-    border: 0px solid white; /* Border around each square */
+    border: 0px solid #ffffff; /* Border around each square */
     width: 100%; /* Adjusting width to fit in the grid */
     height: 100%; /* Adjusting height to fit in the grid */
     padding: 0;
@@ -37,21 +98,20 @@ h1{
     border-color: #531a09;
     transition: 0.4s;
 }
-#inputButton{  
-    background-color: white; /* Green */
-    border: 2px solid #531a09;
-    border-radius: 5px;
-    color: #531a09;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    transition-duration: 0.4s;     
-    margin: 100px;
+#grid-container {
+    display: grid;
+    background-color: rgb(255, 255, 255);
+    grid-template-columns: repeat(16, 1fr); /* 16 columns */
+    grid-template-rows: repeat(16, 1fr); /* 16 rows */
+    gap: 5px; /* Gap between divs */
+    border: 2px solid black;/* Border for visualization */
+    border-radius: 10px;
+    padding: 6px;
+    margin: 6px;
+    height: 500px;
+    width: 500px;
+    
 }
-#inputButton:hover {
-    background-color: #531a09; /* Green */
-    color: white;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+#grid-container{
+    cursor:crosshair;
 }
