Add an input asking the number of grids we want and finalizing the project

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    color: #531a09;
 }
 .header{
     border-radius: 4px;
@@ -20,8 +21,9 @@ body{
     display: flex;
     flex-direction: row;
     align-items: start;
-    border-radius: 20px;
+    border-radius: 15px;
     justify-content: center;
+    align-items: center;
 }
 .left-side{
     display: flex;
@@ -32,7 +34,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    /*justify-content: end;*/
     padding: 50px;
 }
 .input-container{
@@ -43,7 +45,7 @@ body{
     padding: 2px;
 }
 input[type =number]{
-    border: 3px solid black;
+    border: 3px solid #531a09;
     width: 300px;
     height: 30px;
     padding-left: 10px;
@@ -52,16 +54,16 @@ input[type =number]{
   }
 #enterButton{
     background-color: white; 
-    border: 2px solid #d8481c;
+    border: 2px solid #531a09;
     border-radius: 5px;
-    color: #d8481c;
+    color: #531a09;
     padding: 10px 32px;
     font-size: 16px;
     transition-duration: 0.4s;     
     cursor: pointer;
 }
 #enterButton:hover{
-    background-color: #d8481c; 
+    background-color: #531a09; 
     color: white;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
@@ -69,7 +71,7 @@ input[type =number]{
     text-align: center;
 }
 #resetButton{  
-    background-color: white; /* Green */
+    background-color: white; 
     border: 2px solid #531a09;
     border-radius: 5px;
     color: #531a09;
@@ -81,37 +83,42 @@ input[type =number]{
 
 }
 #resetButton:hover {
-    background-color: #421d11; /* Green */
+    background-color: #421d11; 
     color: white;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .grid-item {
-    background-color: #ccc; /* Default background color */
-    border: 0px solid #ffffff; /* Border around each square */
-    width: 100%; /* Adjusting width to fit in the grid */
-    height: 100%; /* Adjusting height to fit in the grid */
-    padding: 0;
-    transition: 0.3s;
+    background-color: gray; 
+    border: 0.8px solid rgb(255, 241, 241); 
+    width: 100%; 
+  }
+#grid-container {
+    /* dynamic columns and rows */
+    display: grid;
+    background-color: white;
+    border: 2px solid #531a09; /* Border for visualization */
+    border-radius: 0px;
+    padding: 2px;
+    margin: 2px;
+    min-height: 520px;
+    min-width: 620px;
+    height: auto;
+    width: auto; /* Ensure grid items fit within the container */
+    cursor: crosshair;
 }
 .grid-item:hover{
-    border-color: #531a09;
-    transition: 0.4s;
-}
-#grid-container {
-    display: grid;
-    background-color: rgb(255, 255, 255);
-    grid-template-columns: repeat(16, 1fr); /* 16 columns */
-    grid-template-rows: repeat(16, 1fr); /* 16 rows */
-    gap: 5px; /* Gap between divs */
-    border: 2px solid black;/* Border for visualization */
-    border-radius: 10px;
-    padding: 6px;
-    margin: 6px;
-    height: 500px;
-    width: 500px;
+    background-color: #531a09;
+    border: 3px solid #531a09;
     
 }
-#grid-container{
-    cursor:crosshair;
+.sketched{
+    background-color: #531a09;
+    transition-duration: 0.4s;  
+}
+.footer{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
 }
