--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body{
 #wholeBody{
     margin:  auto 10px 10px 10px;
     padding: 10px;
-    padding-bottom: 5px;
     font-family: "Lucida Console", "Courier New", monospace;
     background-color:rgb(215, 211, 211);
     display: flex;
@@ -101,6 +100,7 @@ input[type =number]{
     border-radius: 0px;
     padding: 2px;
     margin: 2px;
+    padding-right: 4px;
     min-height: 520px;
     min-width: 620px;
     height: auto;
